--- a/net.sf.eclipsecs.doc/src/main/resources/index.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/index.html
@@ -42,9 +42,9 @@
         <p>For more Checkstyle goodness check out the <a href="https://github.com/sevntu-checkstyle">sevntu-checkstyle</a> 
             project where Roman Ivanov and his team from the Sevastopol National Technical University, Ukraine are assembling 
             a heap of additional Checkstyle checks.<br/>
-            These checks directly integrate with the eclipse-cs plugin and can be installed from the following update site:<br/>
-            <a href="http://sevntu-checkstyle.github.com/sevntu.checkstyle/update-site/">http://sevntu-checkstyle.github.com/sevntu.checkstyle/update-site/</a>
-            <br/><br/>
+            These checks directly integrate with the eclipse-cs plugin and can be installed from the following update site:
+            <pre>http://sevntu-checkstyle.github.com/sevntu.checkstyle/update-site/</pre>
+            <br/>
         </p>
         
         <h2>-- Corporate Endorsements --</h2>
