Progress on website overhaul

--- a/net.sf.eclipsecs.doc/src/main/resources/index.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/index.html
@@ -44,11 +44,11 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Advanced configuration <b class="caret"
                 ></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#!filesets">Using filesets</a></li>
-                <li><a href="#">Plugin filters</a></li>
-                <li><a href="#">Configuration types</a></li>
+                <li><a href="#!filters">Plugin filters</a></li>
+                <li><a href="#!configtypes">Configuration types</a></li>
                 <li><a href="#">Team configuration best practices</a></li>
                 <li><a href="#">Expanding property placeholders</a></li>
+                <li><a href="#!filesets">Using filesets</a></li>
                 <li><a href="#">Advanced preferences</a></li>
               </ul>
             </li>
