Make new site crawlable

--- a/net.sf.eclipsecs.doc/src/main/resources/main.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/main.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Eclipse Checkstyle Plugin</title>
+    <meta name="fragment" content="!" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Eclipse Checkstyle Plugin (eclipse-cs) web page" />
     <meta name="author" content="Lars Ködderitzsch" />
