--- a/net.sf.eclipsecs.doc/src/main/resources/main.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/main.html
@@ -32,39 +32,39 @@
         </div>
         <div class="navbar-collapse collapse navbar-responsive-collapse" data-ng-class="{'in':!navCollapsed}">
           <ul class="nav navbar-nav">
-            <li><a href="#!releasenotes">What's new</a></li>
+            <li><a href="#!/releasenotes">What's new</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Getting started <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#!install">How to install</a></li>
-                <li><a href="#!project-setup">Project setup</a></li>
-                <li><a href="#!custom-config">Custom Checkstyle configurations</a></li>
+                <li><a href="#!/install">How to install</a></li>
+                <li><a href="#!/project-setup">Project setup</a></li>
+                <li><a href="#!/custom-config">Custom Checkstyle configurations</a></li>
               </ul>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Advanced configuration <b class="caret"
                 ></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#!filters">Plugin filters</a></li>
-                <li><a href="#!configtypes">Configuration types</a></li>
-                <li><a href="#!properties">Expanding property placeholders</a></li>
-                <li><a href="#!filesets">Using filesets</a></li>
-                <li><a href="#!preferences">Advanced preferences</a></li>
+                <li><a href="#!/filters">Plugin filters</a></li>
+                <li><a href="#!/configtypes">Configuration types</a></li>
+                <li><a href="#!/properties">Expanding property placeholders</a></li>
+                <li><a href="#!/filesets">Using filesets</a></li>
+                <li><a href="#!/preferences">Advanced preferences</a></li>
               </ul>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Plugin extensions <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#!extensions">Building an extension plugin</a></li>
-                <li><a href="#!custom-checks">Custom Checkstyle modules</a></li>
-                <li><a href="#!builtin-config">Custom built-in Checkstyle configurations</a></li>
-                <li><a href="#!custom-filters">Custom plugin filters</a></li>
+                <li><a href="#!/extensions">Building an extension plugin</a></li>
+                <li><a href="#!/custom-checks">Custom Checkstyle modules</a></li>
+                <li><a href="#!/builtin-config">Custom built-in Checkstyle configurations</a></li>
+                <li><a href="#!/custom-filters">Custom plugin filters</a></li>
               </ul>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Huh? Get help <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#!faq">FAQ</a></li>
+                <li><a href="#!/faq">FAQ</a></li>
                 <li class="divider"></li>
                 <li><a target="_blank" href="https://sourceforge.net/p/eclipse-cs/discussion/?source=navbar">Ask on the
                     forums <i class="fa fa-external-link"></i></a></li>
