--- a/net.sf.eclipsecs.doc/src/main/resources/main.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/main.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Eclipse Checkstyle Plugin</title>
+    <meta name="description"
+      content="The Checkstyle Plugin for Eclipse. Coding standards made easy by immediate feedback." />
+    <meta name="keywords"
+      content="checkstyle, eclipse, eclipse plugin, eclipse-cs, code style, code analysis, coding standards, java, software quality" />
+    <meta name="author" content="Lars Ködderitzsch" />
     <meta name="fragment" content="!" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Eclipse Checkstyle Plugin (eclipse-cs) web page" />
-    <meta name="author" content="Lars Ködderitzsch" />
     <!-- stylesheets -->
     <link href="3rd-party/bootstrap-3.2.0/css/bootstrap-spacelab.min.css" rel="stylesheet" data-semver="3.2.0"
       data-require="bootstrap-css" />
