--- a/net.sf.eclipsecs.doc/src/main/resources/main.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/main.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Eclipse Checkstyle Plugin</title>
-    <meta name="description"
-      content="The Checkstyle Plugin for Eclipse. Coding standards made easy by immediate feedback." />
+    <meta name="description" content="Checkstyle integration into the Eclipse IDE. Coding standards made easy." />
     <meta name="keywords"
       content="checkstyle, eclipse, eclipse plugin, eclipse-cs, code style, code analysis, coding standards, java, software quality" />
     <meta name="author" content="Lars Ködderitzsch" />
