Update website to reflect source repository move to Github, deactivate ad

--- a/net.sf.eclipsecs.doc/src/main/resources/main.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/main.html
@@ -98,7 +98,7 @@
       </div>
     </div>
     <!--  javascript -->
-    <script src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- script src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
     <script src="3rd-party/angular-1.2.26/angular.min.js" data-semver="1.2.26" data-require="angular.js@1.2.x"></script>
     <script src="3rd-party/angular-1.2.26/angular-animate.min.js" data-semver="1.2.26" data-require="angular.js@1.2.x"></script>
     <script src="3rd-party/angular-1.2.26/angular-route.min.js" data-semver="1.2.26" data-require="angular.js@1.2.x"></script>
